[tool.poetry]
name = "fastapi-app"
version = "0.0.0"
description = "FastAPI project template using Poetry and Docker"
authors = ["Martin Z <martin@apsistechnologies.com>"]
license = "MIT"
repository = "git@github.com:ApsisTechnologies/narwhal.git"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.16.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
